syntax = "proto3";

package sensateiot;
option csharp_namespace = "SensateIoT.Platform.Network.Contracts.DTO";

message TextMessage {
	string Data = 1;
	string Timestamp = 2;
	double Longitude = 3;
	double Latitude = 4;
	string SensorID = 5;
}

message TextMessageData {
	repeated TextMessage Messages = 1;
}
